aws-eks/prod-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <INPUT_APP_NAME>-ingress
  namespace: <INPUT_SVC_NAME>
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: <INPUT_APP_NAME>-service
                port:
                  number: 8080
